--- a/Bicep Samples/azuredevops.yaml
+++ b/Bicep Samples/azuredevops.yaml
@@ -8,7 +8,7 @@ pool:
 variables:
   # subscriptionId: ''
   - name: azureResourceManagerConnection
-    value: '$(azureResourceManagerConnection)'
+    value: 'CloudIntegrationTraining'
   # resourceGroupName: ''
   # location: ''
 
@@ -26,7 +26,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Azure CLI '
       inputs:
-        azureSubscription: ${{ variables.azureResourceManagerConnection }}
+        azureSubscription: '$(azureResourceManagerConnection)'
         scriptType: ps
         scriptLocation: inlineScript
         inlineScript: 'az bicep build --file appconfiguration.bicep --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
@@ -42,7 +42,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Azure CLI '
       inputs:
-        azureSubscription: ${{ variables.azureResourceManagerConnection }}
+        azureSubscription: '$(azureResourceManagerConnection)'
         scriptType: ps
         scriptLocation: inlineScript
         inlineScript: 'az bicep build --file keyvault.bicep --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
@@ -58,7 +58,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Azure CLI '
       inputs:
-        azureSubscription: ${{ variables.azureResourceManagerConnection }}
+        azureSubscription: '$(azureResourceManagerConnection)'
         scriptType: ps
         scriptLocation: inlineScript
         inlineScript: 'az bicep build --file loganalyticsworkspace.bicep --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
