--- a/Bicep Samples/azuredevops.yaml
+++ b/Bicep Samples/azuredevops.yaml
@@ -7,7 +7,7 @@ pool:
   name: Azure Pipelines
 
 variables:
-  azureResourceManagerConnection: ${{ azureResourceManagerConnection }}
+  azureResourceManagerConnection: '${{ azureResourceManagerConnection }}'
 
 stages:
 - stage: Build 
