working github actions 1

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,13 +10,13 @@ jobs:
     - uses: actions/checkout@main
 
       # Log into Azure
-    - uses: azure/login@v1
+    - uses: azure/actions/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # build Bicep file
     - name: Azure CLI script file
-      uses: azure/CLI@v1
+      uses: azure/actions/CLI@v1
       with:
         azcliversion: 2.30.0
         inlineScript: 'az bicep build --file "Bicep Samples/appconfiguration.bicep" --outdir /AzureDeployFiles'
