--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,4 +21,4 @@ jobs:
       uses: azure/CLI@v1
       with:
         azcliversion: 2.30.0
-        inlineScript: 'az bicep build --file "Bicep Samples/appconfiguration.bicep" --outdir /AzureDeployFiles'
+        inlineScript: 'az bicep build --file "Bicep Samples/appconfiguration.bicep"'
