--- a/Bicep Samples/azuredevops.yaml
+++ b/Bicep Samples/azuredevops.yaml
@@ -87,6 +87,22 @@ stages:
         Contents: apimanagement.json
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
         CleanTargetFolder: false
+
+    - task: AzureCLI@2
+      displayName: 'Azure CLI '
+      inputs:
+        azureSubscription: '$(azureResourceManagerConnection)'
+        scriptType: ps
+        scriptLocation: inlineScript
+        inlineScript: 'az bicep build --file "Bicep Samples/apimanagementAPI.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+
+    - task: CopyFiles@2
+      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+      inputs:
+        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+        Contents: apimanagementAPI.json
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+        CleanTargetFolder: false
         
     - task: AzureCLI@2
       displayName: 'Azure CLI '
