--- a/Bicep Samples/azuredevops.yaml
+++ b/Bicep Samples/azuredevops.yaml
@@ -30,13 +30,13 @@ stages:
         azureSubscription: '$(azureResourceManagerConnection)'
         scriptType: ps
         scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/appconfiguration.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+        inlineScript: 'az bicep build --file "Bicep Samples/shared.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
     - task: CopyFiles@2
       displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: appconfiguration.json
+        Contents: shared.json
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
         CleanTargetFolder: true
 
@@ -46,111 +46,143 @@ stages:
         azureSubscription: '$(azureResourceManagerConnection)'
         scriptType: ps
         scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/keyvault.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+        inlineScript: 'az bicep build --file "Bicep Samples/environment.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
     - task: CopyFiles@2
       displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: keyvault.json
+        Contents: environment.json
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+        CleanTargetFolder: true
 
-    - task: AzureCLI@2
-      displayName: 'Azure CLI '
-      inputs:
-        azureSubscription: '$(azureResourceManagerConnection)'
-        scriptType: ps
-        scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/loganalyticsworkspace.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/appconfiguration.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
-    - task: CopyFiles@2
-      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: loganalyticsworkspace.json
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: appconfiguration.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: true
 
-    - task: AzureCLI@2
-      displayName: 'Azure CLI '
-      inputs:
-        azureSubscription: '$(azureResourceManagerConnection)'
-        scriptType: ps
-        scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/apimanagementbase.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/keyvault.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
-    - task: CopyFiles@2
-      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: apimanagementbase.json
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: keyvault.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
 
-    - task: AzureCLI@2
-      displayName: 'Azure CLI '
-      inputs:
-        azureSubscription: '$(azureResourceManagerConnection)'
-        scriptType: ps
-        scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/apimanagementAPI.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/loganalyticsworkspace.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
-    - task: CopyFiles@2
-      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: apimanagementAPI.json
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: loganalyticsworkspace.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
+
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/apimanagementbase.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: apimanagementbase.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
+
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/apimanagementAPI.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: apimanagementAPI.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
         
-    - task: AzureCLI@2
-      displayName: 'Azure CLI '
-      inputs:
-        azureSubscription: '$(azureResourceManagerConnection)'
-        scriptType: ps
-        scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/functionApps.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/functionApps.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
-    - task: CopyFiles@2
-      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: functionApps.json
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: functionApps.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
 
-    - task: AzureCLI@2
-      displayName: 'Azure CLI '
-      inputs:
-        azureSubscription: '$(azureResourceManagerConnection)'
-        scriptType: ps
-        scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/logicAppsConsumption.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/logicAppsConsumption.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
-    - task: CopyFiles@2
-      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: logicAppsConsumption.json
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: logicAppsConsumption.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
 
-    - task: AzureCLI@2
-      displayName: 'Azure CLI '
-      inputs:
-        azureSubscription: '$(azureResourceManagerConnection)'
-        scriptType: ps
-        scriptLocation: inlineScript
-        inlineScript: 'az bicep build --file "Bicep Samples/logicAppsStandard.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    # - task: AzureCLI@2
+    #   displayName: 'Azure CLI '
+    #   inputs:
+    #     azureSubscription: '$(azureResourceManagerConnection)'
+    #     scriptType: ps
+    #     scriptLocation: inlineScript
+    #     inlineScript: 'az bicep build --file "Bicep Samples/logicAppsStandard.bicep" --outdir $(System.DefaultWorkingDirectory)/AzureDeployFiles'
 
-    - task: CopyFiles@2
-      displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
-        Contents: logicAppsStandard.json
-        TargetFolder: '$(Build.ArtifactStagingDirectory)'
-        CleanTargetFolder: false
+    # - task: CopyFiles@2
+    #   displayName: 'Copy ARM Files to: $(Build.ArtifactStagingDirectory)'
+    #   inputs:
+    #     SourceFolder: '$(System.DefaultWorkingDirectory)/AzureDeployFiles'
+    #     Contents: logicAppsStandard.json
+    #     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    #     CleanTargetFolder: false
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: bicep samples'
